added endpoint for CleanerBookings
